Utworzono za pomocą Colab

--- a/250-data-science-bootcamp-w-jezyku-python/031_040_exercises.ipynb
+++ b/250-data-science-bootcamp-w-jezyku-python/031_040_exercises.ipynb
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "e0f791d8-6f61-4f8b-b0d7-1eeae9acc57b"
+        "outputId": "c5932a83-9ffc-4b26-d7ed-e9cc6aaa4130"
       },
       "source": [
         "import numpy as np\n",
@@ -470,26 +470,38 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "232a267e-f9dd-4431-f9f1-8574a6342ef2"
+        "outputId": "fd09eceb-6ddf-48f5-f83e-bfe34c132ef8"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "A = np.tril(np.ones((5,5)))\n",
-        "print(f\"1. Rozwiązanie własne A = \\n {A}\")\n",
+        "print(f\"1. Rozwiązanie własne 1 A = \\n {A}\")\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "A = np.tri(5, 5, 0, dtype= 'float')\n",
+        "print(f\"1. Rozwiązanie własne 2 A = \\n {A}\")\n",
         "print(\"\\n\")\n",
         "\n",
         "# Rozwiązanie autora\n",
-        "A = np.tri(5, 5, 0, dtype= 'float')\n",
+        "A = np.tri(N=5)\n",
         "print(f\"1. Rozwiązanie autora A = \\n {A}\")\n",
         "print(\"\\n\")\n"
       ],
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1. Rozwiązanie własne A = \n",
+            "1. Rozwiązanie własne 1 A = \n",
+            " [[1. 0. 0. 0. 0.]\n",
+            " [1. 1. 0. 0. 0.]\n",
+            " [1. 1. 1. 0. 0.]\n",
+            " [1. 1. 1. 1. 0.]\n",
+            " [1. 1. 1. 1. 1.]]\n",
+            "\n",
+            "\n",
+            "1. Rozwiązanie własne 2 A = \n",
             " [[1. 0. 0. 0. 0.]\n",
             " [1. 1. 0. 0. 0.]\n",
             " [1. 1. 1. 0. 0.]\n",
@@ -522,13 +534,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NZoI-8PeXudZ"
+        "id": "NZoI-8PeXudZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dff42f83-6ca8-4053-8e54-e159fcd624a5"
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "# tutaj wpisz rozwiązanie\n",
+        "A = np.random.rand(2, 3, 4)\n",
+        "print(A)\n",
+        "\n",
+        "B = np.random.randint(5, size = (2, 3, 4))\n",
+        "print(B)\n",
+        "print(\"\\n\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[1 1 2 1]\n",
+            "  [0 3 4 3]\n",
+            "  [0 1 4 0]]\n",
+            "\n",
+            " [[4 0 0 2]\n",
+            "  [0 4 2 4]\n",
+            "  [1 3 0 1]]]\n",
+            "\n",
+            "\n",
+            "[[[0.72503761 0.88932975 0.18985212 0.01925305]\n",
+            "  [0.73975681 0.38616233 0.87926181 0.28343187]\n",
+            "  [0.91913681 0.9849413  0.64377921 0.83579738]]\n",
+            "\n",
+            " [[0.41184411 0.33685045 0.88621856 0.83308167]\n",
+            "  [0.86860925 0.78059067 0.94058312 0.78046782]\n",
+            "  [0.04134004 0.118475   0.31102717 0.37542584]]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -547,13 +592,13 @@
         "id": "4UXbFDEVZr1J",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 240
+          "height": 158
         },
         "outputId": "994c615f-e202-4d34-afbd-0a45b29573d6"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
-        "image = np.random.randint(0, 256, size = (200, 300), dtype=np.uint8)\n",
+        "image = np.random.randint(low = 0, high = 256, size = (200, 300), dtype=np.uint8)\n",
         "image"
       ],
       "execution_count": 29,
