Utworzono za pomocą Colab

--- a/250-data-science-bootcamp-w-jezyku-python/051_060_exercises.ipynb
+++ b/250-data-science-bootcamp-w-jezyku-python/051_060_exercises.ipynb
@@ -238,7 +238,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9313886a-a0df-4ae0-bed0-20aac4f244f5"
+        "outputId": "a7dd7a59-875e-47a9-fc98-f85867f902ab"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -246,10 +246,10 @@
         "                 [3.1, 3.6]])\n",
         "target = np.array([[0],\n",
         "                   [1]])\n",
-        "C = np.concatenate((data, target), axis = -1)\n",
+        "C = np.concatenate((data, target), axis = 1)\n",
         "C"
       ],
-      "execution_count": 5,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,7 +260,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 68
         }
       ]
     },
@@ -407,11 +407,11 @@
         "print(f\"B3: \\n{B3}\\n\")\n"
       ],
       "metadata": {
-        "id": "bnqildE5rKVK",
-        "outputId": "ba520cc2-299c-47d7-b4fa-68834d8f4879",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bnqildE5rKVK",
+        "outputId": "ba520cc2-299c-47d7-b4fa-68834d8f4879"
       },
       "execution_count": 20,
       "outputs": [
@@ -732,40 +732,40 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3ada5601-4b0e-42ae-8ab3-22c3927c1bb6"
+        "outputId": "6a66c130-ed30-4d1c-9970-21b4aa7d50c3"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "A = np.random.randn(8, 4)\n",
         "print(f\"A oryginal table = \\n {A}\")\n",
         "\n",
-        "B = np.delete(A, 2, axis = 1)\n",
+        "B = np.delete(A, [2], axis = 1)\n",
         "print(f\"A delete 3 column = \\n {B}\")"
       ],
-      "execution_count": 58,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "A oryginal table = \n",
-            " [[ 0.71095997  0.44426331 -0.36096617  1.1593298 ]\n",
-            " [-1.08106333  0.61593561  0.59310126 -0.30954644]\n",
-            " [ 0.32613302 -1.25111358  0.92402702 -0.18490214]\n",
-            " [-0.52272302  1.04900923 -0.70434369 -1.4084613 ]\n",
-            " [-1.55662917  0.60600995 -1.28042935  1.75479418]\n",
-            " [-2.08192941  1.69645637  0.21101747 -0.09671311]\n",
-            " [-0.54491909  0.39913611 -0.0376347   1.10330188]\n",
-            " [ 0.11422765  0.15030176 -0.36361221 -0.05694562]]\n",
+            " [[ 0.83449272 -1.83853312  2.39849861  2.67410389]\n",
+            " [-0.18049166 -0.92648906  1.68630357 -0.34379014]\n",
+            " [ 0.16103951  1.21728973 -0.15351146 -0.24105425]\n",
+            " [-1.27239498 -0.6305431  -0.26076985 -1.23856319]\n",
+            " [-1.14793582  0.03360132 -1.84970415 -0.87916302]\n",
+            " [ 1.94459399 -0.34546865 -0.47072341 -0.34994583]\n",
+            " [-0.33415238  0.57486887  0.50486615 -0.39075841]\n",
+            " [-0.21383742  1.31277312 -1.51030475 -0.05758202]]\n",
             "A delete 3 column = \n",
-            " [[ 0.71095997  0.44426331  1.1593298 ]\n",
-            " [-1.08106333  0.61593561 -0.30954644]\n",
-            " [ 0.32613302 -1.25111358 -0.18490214]\n",
-            " [-0.52272302  1.04900923 -1.4084613 ]\n",
-            " [-1.55662917  0.60600995  1.75479418]\n",
-            " [-2.08192941  1.69645637 -0.09671311]\n",
-            " [-0.54491909  0.39913611  1.10330188]\n",
-            " [ 0.11422765  0.15030176 -0.05694562]]\n"
+            " [[ 0.83449272 -1.83853312  2.67410389]\n",
+            " [-0.18049166 -0.92648906 -0.34379014]\n",
+            " [ 0.16103951  1.21728973 -0.24105425]\n",
+            " [-1.27239498 -0.6305431  -1.23856319]\n",
+            " [-1.14793582  0.03360132 -0.87916302]\n",
+            " [ 1.94459399 -0.34546865 -0.34994583]\n",
+            " [-0.33415238  0.57486887 -0.39075841]\n",
+            " [-0.21383742  1.31277312 -0.05758202]]\n"
           ]
         }
       ]
