Utworzono za pomocą Colab

--- a/250-data-science-bootcamp-w-jezyku-python/061_070_exercises.ipynb
+++ b/250-data-science-bootcamp-w-jezyku-python/061_070_exercises.ipynb
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "56d5f905-a4e6-4dc1-fa63-2706ff17b000"
+        "outputId": "fd2c600c-c18d-4be0-8487-da17355a6837"
       },
       "source": [
         "import numpy as np\n",
@@ -70,7 +70,7 @@
         "np.random.seed(42)\n",
         "np.__version__"
       ],
-      "execution_count": 2,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -83,7 +83,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 24
         }
       ]
     },
@@ -122,7 +122,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "221da2c5-3001-4f12-ae49-40e802d19d27"
+        "outputId": "f0a72c4e-0fd2-4ea2-b469-3f91110c7e96"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -130,16 +130,25 @@
         "              [5, 3, 2, 5]])\n",
         "B = np.array([[4, 3, 2, 5],\n",
         "              [6, 3, 1, 6]])\n",
-        "print ((A + B) / 2)"
+        "\n",
+        "print ((A + B) / 2)\n",
+        "\n",
+        "# rozwiązanie autora\n",
+        "print(f\"\\nRozwiązanie autora: \\n{np.divide(np.add(A, B), 2)}\\n\")"
       ],
-      "execution_count": 3,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[[3.5 3.5 5.5 3.5]\n",
-            " [5.5 3.  1.5 5.5]]\n"
+            " [5.5 3.  1.5 5.5]]\n",
+            "\n",
+            "Rozwiązanie autora: \n",
+            "[[3.5 3.5 5.5 3.5]\n",
+            " [5.5 3.  1.5 5.5]]\n",
+            "\n"
           ]
         }
       ]
@@ -169,7 +178,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52338780-13ed-410a-ddf7-87a5f092bde8"
+        "outputId": "39010adc-78ac-4a79-eee4-d7f0834bb023"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -179,20 +188,25 @@
         "              [6, 3, 1, 6]])\n",
         "\n",
         "C = A * B\n",
-        "C"
+        "print(C)\n",
+        "\n",
+        "# rozwiązanie autora\n",
+        "print(f\"\\nRozwiązanie autora: \\n{np.multiply(A, B)}\\n\")"
       ],
-      "execution_count": 4,
+      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[12, 12, 18, 10],\n",
-              "       [30,  9,  2, 30]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[12 12 18 10]\n",
+            " [30  9  2 30]]\n",
+            "\n",
+            "Rozwiązanie autora: \n",
+            "[[12 12 18 10]\n",
+            " [30  9  2 30]]\n",
+            "\n"
+          ]
         }
       ]
     },
@@ -274,7 +288,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "51bb2329-7339-4ae9-d7c2-169d5e40d7a0"
+        "outputId": "63285f22-a062-4069-b9c8-32e1b26dcf76"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -291,9 +305,13 @@
         "print(f\"Tablica B: \\n {B}\\n\")\n",
         "print(\"Wynik sin^2 + cos^2 dla A:\")\n",
         "print(result)\n",
-        "print(\"\\nCzy wynik jest równy B (jedynce)?:\", equal)"
+        "print(\"\\nCzy wynik jest równy B (jedynce)?:\", equal)\n",
+        "\n",
+        "# Rozwiązanie autora\n",
+        "resultB = np.allclose(np.power(np.sin(A), 2) + np.power(np.cos(A), 2), B)\n",
+        "print(\"\\nRozwiązanie autora. Czy wynik jest równy B (jedynce)?: \", resultB)"
       ],
-      "execution_count": 6,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +327,9 @@
             "Wynik sin^2 + cos^2 dla A:\n",
             "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
             "\n",
-            "Czy wynik jest równy B (jedynce)?: True\n"
+            "Czy wynik jest równy B (jedynce)?: True\n",
+            "\n",
+            "Rozwiązanie autora. Czy wynik jest równy B (jedynce)?:  True\n"
           ]
         }
       ]
@@ -383,7 +403,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "518c97d1-a282-48db-8860-cdd99ba9fbb6"
+        "outputId": "f7867ad6-3896-4fd8-bb0b-8528cfeb088e"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -396,7 +416,7 @@
         "C = np.dot(A, B)\n",
         "C"
       ],
-      "execution_count": 8,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +428,62 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.dot(B)"
+      ],
+      "metadata": {
+        "id": "X-Ck8LrvJmo6",
+        "outputId": "538be337-35fa-4873-d040-71be209e0638",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  5,   6,  10],\n",
+              "       [-18, -12,  -4],\n",
+              "       [ 20,  15,  10]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "B.dot(A)"
+      ],
+      "metadata": {
+        "id": "FAoMI62OJtWl",
+        "outputId": "4836d169-dbf4-4e9e-e389-8696a5c5668c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 6, 18],\n",
+              "       [ 8, -3]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
         }
       ]
     },
@@ -683,7 +758,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9983040c-bda2-4aaf-f904-1a101537d951"
+        "outputId": "530d048f-c114-4c14-9faa-7695238cd202"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -693,9 +768,17 @@
         "print(f\"Macierz A: \\n{A}\\n\")\n",
         "invA = np.linalg.inv(A)\n",
         "print(\"Macierz odwrotna do A:\\n\")\n",
-        "print(invA)"
+        "print(invA)\n",
+        "\n",
+        "\n",
+        "print(\"\\nSprawdzenie. Macierz odwrotna do macierzy odwrotnej invA:\\n\")\n",
+        "A_inv = np.linalg.inv(invA)\n",
+        "print(A_inv)\n",
+        "\n",
+        "# Sprawdzenie autora, macierz jednostkowa\n",
+        "print(f\"\\n Macierz jednostkowa: \\n {np.dot(A, np.linalg.inv(A))}\")"
       ],
-      "execution_count": 16,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,7 +793,18 @@
             "\n",
             "[[-0.2139  0.7562  0.2388]\n",
             " [ 0.0597  0.0448  0.1194]\n",
-            " [ 0.0995 -0.2587 -0.1343]]\n"
+            " [ 0.0995 -0.2587 -0.1343]]\n",
+            "\n",
+            "Sprawdzenie. Macierz odwrotna do macierzy odwrotnej invA:\n",
+            "\n",
+            "[[  5.   8.  16.]\n",
+            " [  4.   1.   8.]\n",
+            " [ -4.   4. -11.]]\n",
+            "\n",
+            " Macierz jednostkowa: \n",
+            " [[ 1.  0.  0.]\n",
+            " [ 0.  1.  0.]\n",
+            " [-0.  0.  1.]]\n"
           ]
         }
       ]
@@ -796,9 +890,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Ślad macierzy to suma elementów znajdujących się na głównej przekątnej macierzy (czyli elementów, dla których indeks wiersza jest równy indeksowi kolumny)."
-      ],
+      "source": [],
       "metadata": {
         "id": "umLBiqVKkKZc"
       }
@@ -841,7 +933,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9634797a-69e5-42da-c3e7-607aae3a242d"
+        "outputId": "cdb1236d-1c22-40b3-f83f-39d88a3c9c6d"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -850,9 +942,13 @@
         "print(\"Macierz A:\")\n",
         "print(A)\n",
         "print(\"\\nTransponowana macierz A:\")\n",
-        "print(A_transposed)"
+        "print(A_transposed)\n",
+        "\n",
+        "# Rozwiązanie autora\n",
+        "tran = np.transpose(A)\n",
+        "print(f\"\\nRozwiązanie autora. Transponowana macierz A: \\n{tran}\")"
       ],
-      "execution_count": 18,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,6 +960,11 @@
             " [ -4   4 -11]]\n",
             "\n",
             "Transponowana macierz A:\n",
+            "[[  5   4  -4]\n",
+            " [  8   1   4]\n",
+            " [ 16   8 -11]]\n",
+            "\n",
+            "Rozwiązanie autora. Transponowana macierz A: \n",
             "[[  5   4  -4]\n",
             " [  8   1   4]\n",
             " [ 16   8 -11]]\n"
@@ -923,7 +1024,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7fce3261-d582-4241-f046-ff66737381de"
+        "outputId": "7cc9b2d8-59aa-493c-d5c8-1dc44e263369"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -932,6 +1033,9 @@
         "              [5, 3],\n",
         "              [4, 2]])\n",
         "B = np.array([[4, 0, 2, 1, 1, 0, 2, 9]])\n",
+        "\n",
+        "print(f\"Shape A: \\n{A.shape}\")\n",
+        "print(f\"Shape B: \\n{B.shape}\\n\")\n",
         "\n",
         "print(f\"Macierz A: \\n {A} \\n\")\n",
         "\n",
@@ -949,12 +1053,17 @@
         "# Obliczenie elementów macierzy wynikowej:\n",
         "# iloczyn macierzy (4,2) i (2,4) daje macierz (4,4)\n"
       ],
-      "execution_count": 23,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Shape A: \n",
+            "(4, 2)\n",
+            "Shape B: \n",
+            "(1, 8)\n",
+            "\n",
             "Macierz A: \n",
             " [[2 0]\n",
             " [4 2]\n",
