Utworzono za pomocą Colab

--- a/250-data-science-bootcamp-w-jezyku-python/071_080_exercises.ipynb
+++ b/250-data-science-bootcamp-w-jezyku-python/071_080_exercises.ipynb
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "eaebd480-95aa-4f87-ea0f-6baf380ad833"
+        "outputId": "0a2932b4-8729-4233-9f7c-8314dff159fc"
       },
       "source": [
         "import numpy as np\n",
@@ -178,7 +178,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "334c8ae7-0d9f-4fa9-a1f4-351708ad5eb1"
+        "outputId": "4ed4844a-3cb1-4365-842d-1223b5c0b793"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -186,7 +186,7 @@
         "A_sort = np.argsort(A)\n",
         "A_sort"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -357,19 +357,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b20b91de-4fd8-4f08-b268-48e9a26d0537"
+        "outputId": "d26c87ee-808a-4348-d09d-dbddc27e9efe"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "polynomial1 = np.array([2, 4, -5, 1])\n",
-        "polynomial2 = np.array([2, -5, 1])\n",
+        "polynomial2 = np.array([2, 0, -5, 1])\n",
         "roots1 = np.roots(polynomial1)\n",
         "roots2 = np.roots(polynomial2)\n",
         "\n",
         "print(f\"Pierwiastki wielomianu W(x) = 2x^3 + 4x^2 − 5x + 1: {roots1}\\n\")\n",
         "print(f\"Pierwiastki wielomianu W(x) = 2x^3 − 5x + 1: {roots2}\\n\")\n"
       ],
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +377,7 @@
           "text": [
             "Pierwiastki wielomianu W(x) = 2x^3 + 4x^2 − 5x + 1: [-2.91610583  0.65388685  0.26221898]\n",
             "\n",
-            "Pierwiastki wielomianu W(x) = 2x^3 − 5x + 1: [2.28077641 0.21922359]\n",
+            "Pierwiastki wielomianu W(x) = 2x^3 − 5x + 1: [-1.67298165  1.46961743  0.20336421]\n",
             "\n"
           ]
         }
@@ -391,11 +391,11 @@
         "  print(f\"W({r}) = {v}\\n\")"
       ],
       "metadata": {
-        "id": "XLINPUClQYPl",
-        "outputId": "3a44fe3e-a04e-41ff-daa6-2507201a94e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XLINPUClQYPl",
+        "outputId": "3a44fe3e-a04e-41ff-daa6-2507201a94e9"
       },
       "execution_count": 16,
       "outputs": [
@@ -438,7 +438,7 @@
         "Wp = np.poly1d(W)\n",
         "Qp = np.poly1d(Q)"
       ],
-      "execution_count": 26,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -458,24 +458,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cd3bb401-837f-475c-88a8-f1593e4e16b5"
+        "outputId": "020ef9b3-4e22-4ede-c708-6a1e51d7d9ec"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "sum_poly = Wp + Qp\n",
-        "sum_poly"
+        "print(sum_poly,\"\\n\")\n",
+        "\n",
+        "# Rozwiązanie autora\n",
+        "print(np.polyadd(W, Q))"
       ],
-      "execution_count": 27,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "poly1d([2, 8, 0, 2])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   3     2\n",
+            "2 x + 8 x + 2 \n",
+            "\n",
+            "[2 8 0 2]\n"
+          ]
         }
       ]
     },
@@ -495,24 +498,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4fcadcc5-7eaa-4579-a3b8-e862d203bf0e"
+        "outputId": "0a6e37d1-de16-4d90-b3e3-68aac1fc0937"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "diff_poly = Wp - Qp\n",
-        "diff_poly"
+        "print(diff_poly, \"\\n\")\n",
+        "\n",
+        "# Rozwiązanie autora\n",
+        "print(np.polysub(W, Q))"
       ],
-      "execution_count": 28,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "poly1d([-2,  0, 10,  0])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    3\n",
+            "-2 x + 10 x \n",
+            "\n",
+            "[-2  0 10  0]\n"
+          ]
         }
       ]
     },
@@ -532,24 +538,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ef52ee89-e7c6-4ac4-84cc-1e2955ad9176"
+        "outputId": "b44eb13c-5014-440f-f62b-63f60b7e9246"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "mul = Wp * Qp\n",
-        "mul"
+        "print(mul, \"\\n\")\n",
+        "\n",
+        "# Rozwiązanie autora\n",
+        "print(np.polymul(W, Q))"
       ],
-      "execution_count": 30,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "poly1d([  8,  26,   2, -17,   0,   1])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   5      4     3      2\n",
+            "8 x + 26 x + 2 x - 17 x + 1 \n",
+            "\n",
+            "[  8  26   2 -17   0   1]\n"
+          ]
         }
       ]
     },
@@ -569,24 +578,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3674d7fc-16fe-4470-84de-fd7618915f29"
+        "outputId": "f421a68b-de1d-4a6a-af84-b89c681f5e97"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "sum_poly = Wp + 2 * Qp\n",
-        "sum_poly"
+        "print(sum_poly, \"\\n\")\n",
+        "\n",
+        "# Rozwiązanie autora\n",
+        "print(np.polyadd(W, 2 * Q))"
       ],
-      "execution_count": 32,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "poly1d([ 4, 12, -5,  3])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   3      2\n",
+            "4 x + 12 x - 5 x + 3 \n",
+            "\n",
+            "[ 4 12 -5  3]\n"
+          ]
         }
       ]
     },
