--- a/250-data-science-bootcamp-w-jezyku-python/081_090_exercises.ipynb
+++ b/250-data-science-bootcamp-w-jezyku-python/081_090_exercises.ipynb
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "bf06fad4-af91-4245-a8fa-85bc804800d7"
+        "outputId": "41cfa081-8b98-4b75-db7f-b75bbaa52845"
       },
       "source": [
         "import numpy as np\n",
@@ -69,7 +69,7 @@
         "np.set_printoptions(linewidth=100)\n",
         "np.__version__"
       ],
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -82,7 +82,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 6
         }
       ]
     },
@@ -112,23 +112,30 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3ee8f554-d253-47fa-dc6f-89bee3c1d6d7"
+        "outputId": "578e5cba-205b-4c72-b7f3-38e01ef84c71"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "import datetime\n",
         "dates = np.arange('2020-01-01', '2020-03-01', dtype = 'datetime64[D]')\n",
         "mondays = np.array([d for d in dates if datetime.datetime.strptime(str(d), '%Y-%m-%d').weekday() == 0]).reshape(2,4)\n",
-        "print(mondays)\n"
+        "print(mondays)\n",
+        "\n",
+        "# Rozwiązanie autora\n",
+        "mon = np.arange('2020-01-06', '2020-03', dtype='datetime64[D]')[::7]\n",
+        "print(\"\\n Rozwiązanie autora: \\n\", mon)\n"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[['2020-01-06' '2020-01-13' '2020-01-20' '2020-01-27']\n",
-            " ['2020-02-03' '2020-02-10' '2020-02-17' '2020-02-24']]\n"
+            " ['2020-02-03' '2020-02-10' '2020-02-17' '2020-02-24']]\n",
+            "Rozwiązanie autora: \n",
+            " ['2020-01-06' '2020-01-13' '2020-01-20' '2020-01-27' '2020-02-03' '2020-02-10' '2020-02-17'\n",
+            " '2020-02-24']\n"
           ]
         }
       ]
@@ -450,6 +457,7 @@
         "# tutaj wpisz rozwiązanie\n",
         "A = np.array([['#summer#time#mood'],\n",
         "              ['#sport#time']])\n",
+        "\n",
         "C = np.char.replace(A, '#', ' ')\n",
         "print(f' Replace #: {C}')\n",
         "\n",
@@ -599,7 +607,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7299c82d-fb6c-4ac6-faa8-2ff11d9fabe7"
+        "outputId": "9c2ebdb5-c6dd-4fb9-ed17-62b6ee09f9b5"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -632,7 +640,7 @@
         "result = np.array(data)\n",
         "result"
       ],
-      "execution_count": 43,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -662,7 +670,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 11
         }
       ]
     },
@@ -683,7 +691,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f36c2050-d6f2-4bdf-9ae6-d5174d40ad8f"
+        "outputId": "9fd43785-523f-4d19-955d-d4c697248e55"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -691,7 +699,7 @@
         "res1 = np.char.replace(res1, ',', '.')\n",
         "res1"
       ],
-      "execution_count": 47,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +729,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 12
         }
       ]
     },
@@ -741,7 +749,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19ea686b-3def-462e-be87-064c4bef270f"
+        "outputId": "b6517be1-1de2-48b7-eeaa-07865985c4c5"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -749,7 +757,7 @@
         "print(f\"kolumna Udział w portfelu(%) = {res2}\")\n",
         "print(f\"Suma w kolumnie Udział w portfelu(%) = {res2.sum()}\")\n"
       ],
-      "execution_count": 51,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,7 +801,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3cd1640e-1d9e-4cbd-b239-477f0cdffb44"
+        "outputId": "090c9a01-51d8-4a25-f886-a983e29fe429"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
@@ -801,7 +809,7 @@
         "stocks_startswith_P = res1[np.char.startswith(res1[:, 0], 'P')]\n",
         "stocks_startswith_P"
       ],
-      "execution_count": 54,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -817,7 +825,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 14
         }
       ]
     },
@@ -838,24 +846,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "558f9bb7-56f0-4884-a629-abe94daa68f6"
+        "outputId": "acde6f3c-e678-4ffe-de09-78dbce7523fa"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
-        "stocks_startswith_P_to_sum = stocks_startswith_P[:,5].astype(float)\n",
-        "stocks_startswith_P_to_sum.sum()\n",
+        "stocks_startswith_P_1= stocks_startswith_P[:,4].astype(float)\n",
+        "stocks_startswith_P_to_sum = np.round(stocks_startswith_P_1.sum(), 2)\n",
         "\n",
-        "print(f\"Kolumna łączny udział spółek: {stocks_startswith_P_to_sum}\")\n",
-        "print(f\"Łączny udział spółek: {stocks_startswith_P_to_sum.sum()}\")\n"
+        "print(f\"Kolumna łączny udział spółek: {stocks_startswith_P_1}\")\n",
+        "print(f\"Łączny udział spółek: {stocks_startswith_P_to_sum}\")\n"
       ],
-      "execution_count": 63,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Kolumna łączny udział spółek: [ 5.27  2.88  1.56 12.44 10.49  1.47  6.64]\n",
-            "Łączny udział spółek: 40.75\n"
+            "Kolumna łączny udział spółek: [ 6.185  2.29   3.905 11.382 12.093  2.377 11.262]\n",
+            "Łączny udział spółek: 49.49\n"
           ]
         }
       ]
