Utworzono za pomocą Colab

--- a/250-data-science-bootcamp-w-jezyku-python/091_100_exercises.ipynb
+++ b/250-data-science-bootcamp-w-jezyku-python/091_100_exercises.ipynb
@@ -491,14 +491,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f7935c5b-f630-4b62-ecf3-39e5c8dbb3be"
+        "outputId": "6ee65f36-09c4-4e4d-967b-8d6a59d5d6cf"
       },
       "source": [
         "# tutaj wpisz rozwiązanie\n",
         "playway_values = playway[1: ,:][:, 1:].astype(float)\n",
         "playway_values"
       ],
-      "execution_count": 46,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -529,7 +529,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 53
         }
       ]
     },
@@ -546,13 +546,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4R_zihb-mNQI"
+        "id": "4R_zihb-mNQI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0897e1ed-aa57-4d06-d4f6-f1b9384b60af"
       },
       "source": [
-        "# tutaj wpisz rozwiązanie"
+        "# tutaj wpisz rozwiązanie\n",
+        "playway_values_mean = np.round(np.mean(playway_values, axis=0), 2)\n",
+        "playway_values_mean"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  283.14,   295.25,   268.69,   282.3 , 48688.05])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "markdown",
